--- a/Eduford/index.html
+++ b/Eduford/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Home Page</title>
 
     <link rel="stylesheet" href="styles/style.css">
 
@@ -27,10 +27,10 @@
             <i class="fas white fa-times" onclick="hideMenu()"></i>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="index.html">ABOUT</a></li>
-                <li><a href="index.html">COURSE</a></li>
-                <li><a href="index.html">BLOG</a></li>
-                <li><a href="index.html">CONTACT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="course.html">COURSE</a></li>
+                <li><a href="blog.html">BLOG</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
         <i class="fas white fa-bars" onclick="showMenu()"></i>
