--- a/Eduford/index.html
+++ b/Eduford/index.html
@@ -22,13 +22,13 @@
 <section class="header">
 
     <nav>
-        <a href="index.html"><img src="img/logo.png" alt=""></a>
+        <a href="index.html"><img src="img/logo.png"  alt=""></a>
         <div class="nav-links" id="navLinks">
             <i class="fas white fa-times" onclick="hideMenu()"></i>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="course.html">COURSE</a></li>
+                <li><a href="course.html">COURSE</a></li>8
                 <li><a href="blog.html">BLOG</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
