--- a/Leika/index.html
+++ b/Leika/index.html
@@ -11,9 +11,76 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+
+    <main>
+
+        <div class="nav-container">
+            <nav>
+                <h1 id="logo">Leica</h1>
+                <ul>
+                    <li><a href="#features">Features</a></li>
+                    <li><a class="order" href="#soon">Order</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <section class="home">
+            <div class="showcase">
+                <h2>Leica M6</h2>
+                <img src="./img/camera 1.png" alt="camera">
+                <div class="info">
+                    <h3>Small But Powerful.</h3>
+                    <p>The new Leica M6 offers 4K at 60fps, Raw video & Full frame sensor</p>   
+                </div>
+            </div>
+
+            <div class="features-container">
+                <section class="features">
+                    <h2>Features</h2>
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./img/card1 1.png" alt="">
+                            <h4>4K 60FPS</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>                        </div>
+                        <div class="card">
+                            <img src="./img/card2 1.png" alt="">
+                            <h4>4K 60FPS</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>                        </div>
+                        <div class="card">
+                            <img src="./img/card3 1.png" alt="">
+                            <h4>4K 60FPS</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                        </div>
+                    </div>
+                </section>
+                <img src="./img/wave.png" class="wave" alt="">
+            </div>
+        </section>
+        
+        <section class="soon">
+            <h2>Coming Soon</h2>
+            <img src="./img/camera-soon-v2 1.png" alt="">
+            <img class="circle" src="./img/circle.png" alt="">
+        </section>
+
+        <footer>
+            <h1>Leika 2020</h1>
+            <ul>
+                <li>
+                    <a href="#"><img src="./img/yt-logo.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/twitter-logo.png" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/instagram-logo.png" alt=""></a>
+                </li>
+            </ul>
+        </footer>
+    </main>
 
 </body>
 </html>
