--- a/Lilopip/index.html
+++ b/Lilopip/index.html
@@ -13,14 +13,14 @@
         <div class="navbar">
             <img src="./img/logo.png" class="logo" alt="">
             <nav>
-                <ul>
+                <ul id="menuList">
                     <li><a href="">Game Controller</a></li>
                     <li><a href="">VR Accessories</a></li>
                     <li><a href="">Media Remotes</a></li>
                     <li><a href="">Others</a></li>
                 </ul>
             </nav>
-            <img src="./img/menu.png" class="menu-icon" alt="">
+            <img src="./img/menu.png" class="menu-icon" onclick="toggleMenu()" alt="">
         </div>
 
         <div class="row">
@@ -47,5 +47,18 @@
             <img src="./img/tw.png" alt="">
         </div>
     </div>
+
+<script>
+    let menuList = document.getElementById("menuList");
+    menuList.style.maxHeight = "0px";
+
+    function toggleMenu(){
+        if (menuList.style.maxHeight=="0px"){
+            menuList.style.maxHeight="130px";
+        } else{
+            menuList.style.maxHeight = "0px";
+        }
+    }
+</script>
 </body>
 </html>
