--- a/Landino/index.html
+++ b/Landino/index.html
@@ -5,12 +5,161 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Landino</title>
     <link rel="stylesheet" href="./styles/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="./styles/style.css">-->
+    <style>
+        #section-hero {
+            background-image: url('./img/3840x2160.png');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            min-height: 100vh;
+        }
+    </style>
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navScrollspy">
+
+<!--Start Of Navbar-->
+<nav class="navbar bg-primary navbar-dark navbar-expand-lg fixed-top">
+    <div class="container">
+        <a href="index.html" class="navbar-brand">
+            <i class="fas fa-camera-retro"></i>
+            App Name
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav" id="navScrollSpy">
+                <li class="nav-item">
+                    <a href="#section-hero" class="nav-link">To the Top</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section-description">Description</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section-trailer">Trailer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section-showcase">Showcase</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section-features">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section-pricing">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section-reviews">Reviews</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!--End Of Navbar-->
+
+<!--Start of Section Hero-->
+<section id="section-hero" class="text-center text-white d-flex justify-content-center align-items-center py-5">
+    <div class="container">
+        <h1 class="display-1 text-primary text-uppercase mt-5">App Name</h1>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="lead">Laborum unde dolores ullam nostrum?</p>
+        <p><strong>Download not on:</strong></p>
+        <a href="#0" class="btn btn-lg btn-primary mb-3 mb-sm-0 me-sm-3"><i class="fab fa-app-store-ios"
+                                                                            aria-hidden="true"></i> App Store</a>
+        <a href="#0" class="btn btn-lg btn-primary"><i class="fab fa-google-play" aria-hidden="true"></i> Google
+            Play</a>
+    </div>
+</section>
+<!--End of Section Hero-->
 
 
+<div class="container">
 
-<script src="https://kit.fontawesome.com/55c38f87bc.js" crossorigin="anonymous"></script>
+    <!--Start of Section Description-->
+    <section id="section-description" class="mt-5">
+        <h2 class="display-4 text-center">What is App Name?</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis voluptates sint at! Laboriosam ducimus
+            expedita reiciendis suscipit quibusdam ad ipsa distinctio voluptatem ullam adipisci id molestias, explicabo
+            iusto atque. Libero voluptates, maxime ipsa iure quis veritatis obcaecati vitae eaque exercitationem non
+            saepe enim!</p>
+        <p>Ducimus et aperiam tempora pariatur, excepturi est mollitia alias, hic voluptas, porro repudiandae voluptatum
+            nulla minus ipsam repellat accusamus voluptate nam modi!</p>
+    </section>
+    <!--End of Section Description-->
+
+    <!--Start of Section Trailer-->
+    <section id="section-trailer" class="mt-5">
+        <h2 class="display-4 text-center">App Name Trailer</h2>
+        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="ratio ratio-16x9">
+            <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI"></iframe>
+        </div>
+    </section>
+    <!--End of Section Trailer-->
+
+    <!--Start of Section showcase-->
+    <section id="section-showcase" class="mt-5">
+        <h2 class="display-4 text-center">App Name In Action</h2>
+        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-bs-target="#carousel" data-bs-slide-to="0" class="active"></li>
+                <li data-bs-target="#carousel" data-bs-slide-to="1"></li>
+                <li data-bs-target="#carousel" data-bs-slide-to="2"></li>
+                <li data-bs-target="#carousel" data-bs-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img src="img/2220x1665-primary.png" alt="Slide #1" class="d-block img-fluid">
+                    <div class="carousel-caption">
+                        <h3 class="display-4">Slide Heading</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/2220x1665-success.png" alt="Slide #1" class="d-block img-fluid">
+                    <div class="carousel-caption">
+                        <h3 class="display-4">Slide Heading</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/2220x1665-danger.png" alt="Slide #1" class="d-block img-fluid">
+                    <div class="carousel-caption">
+                        <h3 class="display-4">Slide Heading</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/2220x1665-warning.png" alt="Slide #1" class="d-block img-fluid">
+                    <div class="carousel-caption">
+                        <h3 class="display-4">Slide Heading</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <a href="#carousel" class="carousel-control-prev" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </a>
+            <a href="#carousel" class="carousel-control-next" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </a>
+        </div>
+    </section>
+    <!--End of Section showcase-->
+
+</div>
 <script src="./js/bootstrap.min.js"></script>
+<script src="./js/smooth-scroll.min.js"></script>
+<script>
+    var scroll = new SmoothScroll('a[href*="#section-"]', {
+        offset: 56
+    });
+</script>
+<script src="https://kit.fontawesome.com/55c38f87bc.js" crossorigin="anonymous"></script>
 </body>
 </html>
