--- a/Landino/index.html
+++ b/Landino/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Landino</title>
     <link rel="stylesheet" href="./styles/bootstrap.min.css">
-    <!--    <link rel="stylesheet" href="./styles/style.css">-->
+    <!--    <link rel="stylesheet" href="./styles/style.styles">-->
     <style>
         #section-hero {
             background-image: url('./img/3840x2160.png');
