--- a/ResponsiveSidebar/index.html
+++ b/ResponsiveSidebar/index.html
@@ -5,18 +5,117 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Responsive Sidebar</title>
 
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
 
-    <div class="sidebar">
+<div class="sidebar active">
+
+    <div>
         <div class="logo-content">
+
             <div class="logo">
+                <i class='bx bxl-c-plus-plus'></i>
                 <div class="logo-name">
                     EquaDesign
                 </div>
             </div>
+            <i class='bx bx-menu-alt-left' id="menuBtn" onclick="classAppend()"></i>
+
         </div>
+
+        <ul class="nav-list">
+            <li class="search-wrapper">
+                <i class='bx bx-search-alt' onclick="classAppend()"></i>
+                <input type="text" placeholder="Search...">
+                <span class="tooltip">Search</span>
+            </li>
+            <li>
+                <a href="" class="nav-link">
+                    <i class='bx bx-grid-alt'></i>
+                    <span class="links-name">Dashboard</span>
+                </a>
+                <span class="tooltip">Dashboard</span>
+            </li>
+            <li>
+                <a href="" class="nav-link">
+                    <i class='bx bx-user'></i>
+                    <span class="links-name">Users</span>
+                </a>
+                <span class="tooltip">Users</span>
+            </li>
+            <li>
+                <a href="" class="nav-link">
+                    <i class='bx bx-message-square-detail'></i>
+                    <span class="links-name">Messages</span>
+                </a>
+                <span class="tooltip">Messages</span>
+            </li>
+            <li>
+                <a href="" class="nav-link">
+                    <i class='bx bx-bar-chart-alt-2'></i>
+                    <span class="links-name">Analytics</span>
+                </a>
+                <span class="tooltip">Analytics</span>
+            </li>
+            <li>
+                <a href="" class="nav-link">
+                    <i class='bx bx-folder'></i>
+                    <span class="links-name">File manager</span>
+                </a>
+                <span class="tooltip">File Manager</span>
+
+            </li>
+            <li>
+                <a href="" class="nav-link">
+                    <i class='bx bx-cart-alt'></i>
+                    <span class="links-name">Order</span>
+                </a>
+                <span class="tooltip">Order</span>
+
+            </li>
+            <li>
+                <a href="" class="nav-link">
+                    <i class='bx bx-bookmark'></i>
+                    <span class="links-name">Saved</span>
+                </a>
+                <span class="tooltip">Saved</span>
+
+            </li>
+            <li>
+                <a href="" class="nav-link">
+                    <i class='bx bx-cog'></i>
+                    <span class="links-name">Settings</span>
+                </a>
+                <span class="tooltip">Settings</span>
+
+            </li>
+        </ul>
     </div>
+
+    <div class="profile-content">
+        <div class="profile">
+            <div class="profile-details">
+                <img src="./img/profile.jpg" alt="">
+                <div class="name-job">
+                    <div class="name">Ehsan Rostami Pour</div>
+                    <div class="job">Web Designer</div>
+                </div>
+            </div>
+            <i class='bx bx-log-out' id="logout"></i>
+        </div>
+
+    </div>
+</div>
+
+<div class="home-content">
+    <div class="text">
+        Home Content
+    </div>
+</div>
+
+
+<script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
